--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -26,6 +24,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  },
-  "homepage": "https://sebaromerox.github.io/component_builder"
+  }
 }
